--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-	<title>Greko - Diego Levin</title>
-	<meta charset="utf-8">
-	<meta name="name" content="Greko">
+	<meta charset="utf-8"><!--Atributo para activar los caracteres-->
+	<meta name="name" content="Greko"><!--Atributo para definir el nombre del sitio-->
+	<meta name="author" content="Yiordi Murillo"><!--Atributo para definir el autor del sitio-->
+	<meta name="description" content="Pagina web oficial de la peluqueria Greko"><!--Atributo para definir la descripcion del sitio-->
+	<meta name="keywords" content="peluqueria, estilo, moda"><!--Atributo para palabras claves del sitio del sitio-->
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+	<title>Greko - Diego Levin</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css"/>
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
+	<!--<link rel="icon" href="../Project_Greko/images/logo.png">-->
 </head>
 <body>
 	<div class='bg_image'>
