--- a/index.html
+++ b/index.html
@@ -2,53 +2,39 @@
 <html lang="es">
 <head>
 	<meta charset="utf-8"><!--Atributo para activar los caracteres-->
-	<meta name="name" content="Greko"><!--Atributo para definir el nombre del sitio-->
+	<meta name="name" content="Yiordi Murillo"><!--Atributo para definir el nombre del sitio-->
 	<meta name="author" content="Yiordi Murillo"><!--Atributo para definir el autor del sitio-->
-	<meta name="description" content="Pagina web oficial de la peluqueria Greko"><!--Atributo para definir la descripcion del sitio-->
-	<meta name="keywords" content="peluqueria, estilo, moda"><!--Atributo para palabras claves del sitio del sitio-->
+	<meta name="description" content="Pagina web oficial de Yiordi Murillo"><!--Atributo para definir la descripcion del sitio-->
+	<meta name="keywords" content="Programador, desarrollador web"><!--Atributo para palabras claves del sitio del sitio-->
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-	<title>Greko - Diego Levin</title>
+	<title>Yiordi Murillo</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css"/>
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
-	<!--<link rel="icon" href="../Project_Greko/images/logo.png">-->
 </head>
 <body>
-	<div class='bg_image'>
-		<div class='container_full'>
-			<div class="container_header">
-				<div class='header'>
-					<div class="logo">
-						<!--<h1 class='pic_logo'></h1>-->
-						<a href="">LOGO</a>	
-					</div>
-					<div class='menu'>
-						<ul>
-							<li>
-								<a>Inicio</a>
-							</li>
-							<li>
-								<a>Nosotros</a>
-							</li>
-							<li>
-								<a>Servicios</a>
-							</li>
-							<li>
-								<a>Team</a>
-							</li>
-							<li>
-								<a>Galeria</a>
-							</li>
-						</ul>
-					</div>
-				</div>
-			</div>
-			<div class="container_body"> 
-			</div>
-			<div class='container_footer'>
-			</div>
-	 	</div>
- 	</div>
+	<header>
+		<a href="">Yiordi Andrei Murillo Levin</a>	
+	</header>
+	<nav>
+		<div>
+			<ul>
+				<li>
+					<a>DESCRIPCION</a>
+				</li>
+				<li>
+					<a>TRABAJOS</a>
+				</li>
+			</ul>
+		</div>
+	</nav>
+	<section>
+
+	</section>
+	<aside>
+
+	</aside>
+	<article>
+
+	</article>
 <script src="http://code.jquery.com/jquery-latest.js"></script>
 <script src="js/main.js"></script>
 </body>
