--- a/index.html
+++ b/index.html
@@ -1,41 +1,41 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-	<meta charset="utf-8"><!--Atributo para activar los caracteres-->
-	<meta name="name" content="Yiordi Murillo"><!--Atributo para definir el nombre del sitio-->
-	<meta name="author" content="Yiordi Murillo"><!--Atributo para definir el autor del sitio-->
-	<meta name="description" content="Pagina web oficial de Yiordi Murillo"><!--Atributo para definir la descripcion del sitio-->
-	<meta name="keywords" content="Programador, desarrollador web"><!--Atributo para palabras claves del sitio del sitio-->
-	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-	<title>Yiordi Murillo</title>
-	<link rel="stylesheet" href="css/style.css" type="text/css"/>
-</head>
-<body>
-	<header>
-		<a href="">Yiordi Andrei Murillo Levin</a>	
-	</header>
-	<nav>
-		<div>
+	<head>
+		<meta charset="utf-8"><!--Atributo para activar los caracteres-->
+		<meta name="name" content="Yiordi Murillo"><!--Atributo para definir el nombre del sitio-->
+		<meta name="author" content="Yiordi Murillo"><!--Atributo para definir el autor del sitio-->
+		<meta name="description" content="Pagina web oficial de Yiordi Murillo"><!--Atributo para definir la descripcion del sitio-->
+		<meta name="keywords" content="Programador, desarrollador web"><!--Atributo para palabras claves del sitio del sitio-->
+		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+		<title>Yiordi Murillo</title>
+		<link rel="stylesheet" href="css/style.css" type="text/css"/>
+	</head>
+	<body>
+	<!--Cabecera-->
+		<header>
+			<div class="logo"><a href="">Yiordi Andrei Murillo Levin</a></div>
+			<div class="socialNetwork">
+			<div></div>
+			<div></div>
+			<div></div>	
+			</div>	
+		</header>
+	<!--Cabecera-->
+	<!--Barra Navegacion-->
+		<nav>
 			<ul>
-				<li>
-					<a>DESCRIPCION</a>
-				</li>
-				<li>
-					<a>TRABAJOS</a>
-				</li>
+				<li><a>DESCRIPCION</a></li>
+				<li><a>TRABAJOS</a></li>
 			</ul>
-		</div>
-	</nav>
-	<section>
-
-	</section>
-	<aside>
-
-	</aside>
-	<article>
-
-	</article>
-<script src="http://code.jquery.com/jquery-latest.js"></script>
-<script src="js/main.js"></script>
-</body>
+		</nav>
+	<!--Barra Navegacion-->
+	<!--Seccion-->
+		<section>
+			seccion principal
+		</section>
+	<!--Seccion-->
+		<footer></footer>
+		<script src="http://code.jquery.com/jquery-latest.js"></script>
+		<script src="js/main.js"></script>
+	</body>
 </html>
